1.Bug Fixes as on 25/08/2020 7:00pm

--- a/app/src/main/res/layout-xxhdpi/fragment_mymap.xml
+++ b/app/src/main/res/layout-xxhdpi/fragment_mymap.xml
@@ -187,6 +187,7 @@
             <androidx.recyclerview.widget.RecyclerView
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
+                android:paddingBottom="24dp"
                 android:id="@+id/recylerMyMaps"
                 app:setVerticalAdapter="@{fragmentMyMapVM.getMyMapAdapter()}"/>
         </LinearLayout>
