--- a/app/src/main/res/layout/fragment_bottom_navigation.xml
+++ b/app/src/main/res/layout/fragment_bottom_navigation.xml
@@ -9,7 +9,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/bottomSheetMore"
-        android:layout_marginBottom="35dp"
         android:orientation="vertical">
         <View
             android:id="@+id/topView"
@@ -22,11 +21,11 @@
             android:background="@color/white"/>
         <GridView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
+            android:layout_height="match_parent"
             android:scrollbars="none"
             android:layout_marginTop="20dp"
             android:layout_marginStart="20dp"
-            android:layout_marginBottom="20dp"
+            android:layout_marginBottom="45dp"
             android:layout_marginEnd="20dp"
             android:numColumns="3"
             android:id="@+id/gridMore"/>
