--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -236,7 +236,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
                                 android:gravity="center"
-                                android:text="aA"
+                                android:text="@string/fonttext"
                                 android:textAlignment="center"
                                 android:fontFamily="@font/dubai_font"
                                 android:textColor="#7F7F7F"
@@ -258,7 +258,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
                                 android:gravity="center"
-                                android:text="aA"
+                                android:text="@string/fonttext"
                                 android:fontFamily="@font/dubai_font"
                                 android:textColor="#7F7F7F"
                                 android:textAlignment="center"
@@ -279,7 +279,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="match_parent"
                                 android:layout_weight="1"
-                                android:text="aA"
+                                android:text="@string/fonttext"
                                 android:layout_gravity="center"
                                 android:gravity="center"
                                 android:id="@+id/fontSize3"
@@ -303,7 +303,7 @@
                                 android:layout_height="wrap_content"
                                 android:layout_gravity="center"
                                 android:gravity="center"
-                                android:text="aA"
+                                android:text="@string/fonttext"
                                 android:fontFamily="@font/dubai_font"
                                 android:textColor="#7F7F7F"
                                 android:textAlignment="center"
@@ -324,7 +324,7 @@
                                 android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:id="@+id/fontSize5"
-                                android:text="aA"
+                                android:text="@string/fonttext"
                                 android:layout_gravity="center"
                                 android:gravity="center"
                                 android:fontFamily="@font/dubai_font"
