--- a/app/src/main/res/layout-mdpi/activity_login.xml
+++ b/app/src/main/res/layout-mdpi/activity_login.xml
@@ -44,8 +44,8 @@
             >
             <ImageView
                 android:id="@+id/splashLogo"
-                android:layout_width="102dp"
-                android:layout_height="102dp"
+                android:layout_width="90dp"
+                android:layout_height="110dp"
                 android:src="@drawable/kharetati_white"
                 android:visibility="visible"
                  />
@@ -170,8 +170,8 @@
 
             <ImageView
                 android:id="@+id/imageView"
-                android:layout_width="90dp"
-                android:layout_height="90dp"
+                android:layout_width="115dp"
+                android:layout_height="125dp"
                 android:layout_marginStart="128.68dp"
                 android:layout_marginTop="100dp"
 
@@ -679,55 +679,61 @@
 
                 <LinearLayout
                     android:id="@+id/layoutEnableUAEPass"
-                    android:layout_width="300dp"
-                    android:layout_height="55dp"
+                    android:layout_width="260dp"
+                    android:layout_height="44dp"
                     android:layout_gravity="center"
-                    android:layout_marginTop="10dp"
+                    android:layout_marginTop="16dp"
+                    android:weightSum="3"
                     android:background="@drawable/rounded_edittext_boarder_bg"
-                    android:gravity="center"
+                    android:gravity="center_vertical|center_horizontal"
                     android:orientation="horizontal"
 
                     android:visibility="visible">
 
                     <TextView
                         android:id="@+id/txtLoginwith"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
 
                         android:layout_height="match_parent"
-
-                        android:layout_gravity="center"
 
                         android:fontFamily="@font/dubai_font"
                         android:gravity="center"
                         android:paddingEnd="2dp"
+                        android:layout_marginStart="-60dp"
+                        android:textAlignment="center"
+                        android:layout_weight=".90"
 
                         android:text="@string/login_with"
                         android:textColor="@color/black"
-                        android:textSize="20sp"
+                        android:textSize="18sp"
                         android:visibility="visible" />
 
                     <ImageView
                         android:id="@+id/imgUAEPass"
-                        android:layout_width="48dp"
-                        android:layout_height="44dp"
+                        android:layout_width="match_parent"
+                        android:layout_height="match_parent"
                         android:layout_gravity="center"
-                        android:padding="5dp"
+                        android:maxWidth="32dp"
+                        android:padding="7dp"
                         android:scaleType="fitXY"
+                        android:layout_weight="1.25"
                         android:src="@drawable/uaepass" />
 
                     <TextView
                         android:id="@+id/txtUAEPass"
-                        android:layout_width="wrap_content"
+                        android:layout_width="match_parent"
 
                         android:layout_height="match_parent"
-                        android:layout_gravity="center"
+                        android:layout_gravity="start|center_vertical"
                         android:fontFamily="@font/dubai_font"
-                        android:gravity="center"
+                        android:gravity="start|center_vertical"
                         android:text="@string/with_uaepass"
+                        android:layout_weight=".90"
+                        android:textAlignment="viewStart"
 
 
                         android:textColor="@color/black"
-                        android:textSize="20sp"
+                        android:textSize="18sp"
                         android:visibility="visible" />
                 </LinearLayout>
 
@@ -759,9 +765,12 @@
                         android:layout_marginStart="8dp"
                         android:fontFamily="@font/dubai_font"
                         android:text="@string/or"
+                        android:paddingTop="8dp"
+                        android:layout_gravity="center_vertical"
+                        android:gravity="center_horizontal"
                         android:textAlignment="center"
                         android:textColor="@color/maroon_light"
-                        android:textSize="@dimen/login_font_size" />
+                        android:textSize="18dp" />
 
                     <View
                         android:layout_width="match_parent"
@@ -775,10 +784,10 @@
 
                 <TextView
                     android:id="@+id/txtGuest"
-                    android:layout_width="300dp"
-                    android:layout_height="55dp"
+                    android:layout_width="260dp"
+                    android:layout_height="44dp"
                     android:layout_gravity="center"
-                    android:layout_marginTop="20dp"
+                    android:layout_marginTop="-120dp"
                     android:background="@drawable/rounded_edittext_maroon_bg"
                     android:fontFamily="@font/dubai_font"
                     android:gravity="center"
@@ -786,14 +795,14 @@
                     android:textAlignment="center"
                     android:textAllCaps="false"
                     android:textColor="@color/white"
-                    android:textSize="20sp" />
+                    android:textSize="22sp" />
 
                 <dm.sime.com.kharetati.view.customview.SwitchCompatEx
                     android:id="@+id/switchLanguageUae"
-                    android:layout_width="150dp"
-                    android:layout_height="24dp"
+                    android:layout_width="180dp"
+                    android:layout_height="32dp"
                     android:layout_gravity="center"
-                    android:layout_marginTop="48dp"
+                    android:layout_marginTop="90dp"
                     android:fontFamily="@font/dubai_font"
                     android:gravity="center"
                     android:layoutDirection="rtl"
